- Prevent default holdtap behavior on iOS for menu buttons

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -196,3 +196,8 @@ h2 {
   margin-bottom: 10px;
   display: none;
 }
+
+a.ui-btn {
+  -webkit-touch-callout: none !important;
+  -webkit-user-drag: none !important;
+}
